--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 /* Add your CSS rules here */
 body {
-  background-color: #fff;
+  background-color: darkgray;
 }
 
 /* Add this CSS to align the navigation bar to the right */
@@ -9,5 +9,5 @@ body {
 }
 
 .active {
-  color: #ff7e67; /* Change to your active color */
+  color: indigo; /* Change to your active color */
   font-weight: bold; }
