--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,5 +9,5 @@ body {
 }
 
 .active {
-  color: indigo; /* Change to your active color */
+  color: orangered; /* Change to your active color */
   font-weight: bold; }
